# Personal_assistant

./: .gitattributes  jarvis_prototype.py
jarvis-project/backend/: .gitattributes  Jarvis.spec  pyproject.toml  server.py  spotify_worker.py  spotify_worker.spec
jarvis-project/backend/gui/: index.html
jarvis-project/backend/gui/assets/: index-BNGcCBqI.css  index-fPZ9QZVn.js
