[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Quentalh",email = "heitorquental321@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "open-interpreter (>=0.4.3,<0.5.0)",
    "speechrecognition (>=3.14.4,<4.0.0)",
    "gtts (>=2.5.4,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "pyinstaller (>=6.17.0,<7.0.0)",
    "pywebview (>=6.1,<7.0)",
    "pygobject (>=3.54.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
